static/css/default.css
body {
  font-family: 'Quicksand', sans-serif !important;
  height: 100%;
}

.footer {
    position: relative;
    /*background: rgba(52,58,64,1);*/
    background: black;
    height: 8.125em;
    border-bottom-right-radius: 15px;
    border-bottom-left-radius: 15px;
}
.footer:before {
    content: "";
    position: absolute;
    z-index: 5;
    display: block;
    right: 0;
    top: -2.5rem;
    width: 100%;
    /*background: rgba(52,58,64,1);*/
    background: black;
    -webkit-transform: skewY( -2deg );
    -ms-transform: skewY(-2deg);
    transform: skewY( -2deg );
    height: 8.125rem;
}

.content {
  position: relative;
  color: white;
  width: 100%;
  z-index: 6;
}

.container-custom {
    height: 100%;
}

.number {
    font-family: Andale Mono, AndaleMono, monospace; 
}

.align-right {
    text-align: right;
}

.boxed {
    margin-top:10px; 
    padding:5px; 
    border:1px solid black; 
    background-color:white;
    border-radius: 5px;
}

.container-content {
    position: relative;
    background-color: white;
    height: 85%;
    /*
    padding-bottom: 100px;
    */
    z-index: 4;
    opacity: 0.92;
}
.bottom {
    padding-bottom: 50px;
}

.head {
    /*background: rgba(52,58,64,1);*/
    background: black;
    color: white;
    border-top-right-radius: 15px;
    border-top-left-radius: 15px;
}

#ingredient_calculation {
    margin-top: 10px;
    padding: 5px;
    border: 1px solid black;
}

#hop_calculator {
    margin: 5px;
    padding: 20px;
    border: 2px solid black;
    border-radius: 5px;
}

#hop_calculator .warning {
    font-size: 10px;
    color: black;
}

#missing_ingredient {
    margin: 5px;
    padding: 5px;
    border: 2px solid red;
    border-radius: 5px;
}
.warning {
    color: red;
}

/* Responsive Bootstrap Tabs without JS */
.tabbable-responsive {
  display: block;
  min-width: 100%;
  overflow-x: auto;

  /* Some tweaks for card-header */
  margin: 0px -20px -13px -20px;
}

.tabbable {
    min-width: 100%;

    .nav-tabs {
      white-space: nowrap;
      display: inline-block;
      min-width: 100%;

      /* Some tweaks for card-header */
      padding: 0px 21px;

      .nav-item {
        display: inline-block;

        .nav-link {
          display: inline-block;
        }
      }
    }
}
/* ----- END */

